# TorchDevice

./: .gitignore  .windsurfrules  20250506-rollback.code-workspace  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TODO.md  Tests_Scripts.md  TorchDevice.tar.xz  clean_whitespace.py  docfile.md  output.txt  package-lock.json  pyproject.toml  pytest.ini  pytorch  requirements.txt  run_tests_and_install.py  setup.py  temp_method.py  test_and_install.sh  test_tdlogger.py  test_torch_device_logging.py  testme  tox.ini  transformers  update_status.py
.github/: FUNDING.yml
.project-planning/: events_streams_implementation.md  initial_package_implementation.md  logging_module_implementation.md  module_operations_implementation.md  refactoring_plan.md  refactoring_summary.md  setup_refactoring.py  tensor_operations_implementation.md
TorchDevice/: TorchDevice.py  __init__.py  _deferred_patches.py  _version.py  originalTorchDeviceClass.py  patch.py
TorchDevice.original/: __init__.py
demos/: README.md  demo_llasa3b_tts.py  demo_streams_events.py  demo_transformers_small.py
docs/: API.md  CUDA-Operations.md  MASTER_ROADMAP.md  TorchDevice_Behavior.md  TorchDevice_Functions.md  modularization-plan.md  performance_architecture_roadmap.md  project_structure.md  pytorch_gap_analysis_strategy.md  transformers_test_status.md
examples/: demo_basic_tensor_computation.py  demo_basic_tensor_operations.py  demo_context_manager.py  demo_cpu_override.py  demo_device_info.py  demo_manual_nn_training.py  demo_matrix_multiplication.py  demo_memory_info.py  example_utils.py  (+12 more)
(+217 files in other folders)
